# gra-PANG

./: .gitignore  CMakeLists.txt  LICENSE  Pang.sln  README.md  build.bat
Pang/: Game.cpp  Game.h  Menu.cpp  Menu.h  Pang.cpp  Pang.vcxproj  Pang.vcxproj.filters  Sprite.cpp  Sprite.h  Tests.cpp  Tests.h  Utils.h  stdafx.cpp
Pang/saves/: s1.psf  s2.psf
Release/: tests.bat
Release/res/font/: organetto.rar
Release/saves/: s0.psf
